--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monochat",
   "version": "0.0.1",
-  "description": "",
+  "description": "hi",
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lacker/monochat#readme",
   "dependencies": {
+    "firebase": "^3.0.2",
     "readline": "^1.3.0"
   }
 }
